@@ -2,6 +2,8 @@
   - fix tests failing on 5.6.x due to differing DESTROY semantics
   - excise superfluous local($@) call - 7% speedup
   - fix (fsvo) broken URLs (RT#55659)
+  - proper exception on erroneous usage of bare catch/finally (RT#81070)
+  - proper exception on erroneous use of multiple catch{} blocks
 
 0.12
   - doc fixes
